--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
                     Our Classes Videos
                   </h2>
                   <p>
-                    iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
-                    ostrud exercitation ullamco laboris iusmod tempor incididunt ut labore et dolore
+                    kanchan my name 
                   </p>
                 </div>
               </div>
