--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <div class="box">
                     <div class="detail-box">
                       <h1>
-                        kanchan <br />
+                        Boxing <br />
                         Center
                       </h1>
                       <hr />
@@ -225,7 +225,7 @@
                     Our Classes Videos
                   </h2>
                   <p>
-                    kanchan my name 
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
                   </p>
                 </div>
               </div>
